fix: mini list overlaping

--- a/src/components/templates/education/program/course/theme/test/Test.module.scss
+++ b/src/components/templates/education/program/course/theme/test/Test.module.scss
@@ -31,6 +31,7 @@
 
 .test {
     width: 800px;
+    max-width: calc(100% - 350px);
     background-color: transparentize($mainBlueColor, 0.7);
     border: 1px solid transparentize($mainBlueColor, 0.5);
     border-radius: 10px;
@@ -46,12 +47,21 @@
         margin-left: 100px;
 
         &_mini {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            width: 100%;
+            position: relative;
+            overflow-y: auto;
+
             &_container {
                 box-shadow: 0 10px 20px #0000002a;
                 position: fixed;
                 top: 200px;
                 right: 100px;
-                width: 350px;
+                width: fit-content;
+                max-width: 350px;
                 background-color: transparentize($mainBlueColor, 0.7);
                 border: 1px solid transparentize($mainBlueColor, 0.5);
                 padding: 20px;
@@ -63,14 +73,6 @@
                     opacity: 1;
                 }
             }
-
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            width: 100%;
-            position: relative;
-            overflow-y: auto;
 
             & .item {
                 background-color: transparentize($mainBlueColor, 0.9);
